--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,23 @@
         android:theme="@style/Theme.Tic_tac_toe_app"
         tools:targetApi="31">
         <activity
-            android:name=".ResultScreen"
+            android:name=".start_screen"
             android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ResultScreen"
+            android:exported="false">
+
         </activity>
         <activity
             android:name=".MainActivity"
             android:exported="false">
+
         </activity>
     </application>
 
